Changed color of mute button

--- a/src/components/TerminalGame/TerminalGame.scss
+++ b/src/components/TerminalGame/TerminalGame.scss
@@ -60,7 +60,8 @@
 }
 
 .unmute {
-  background-color: $art-deco-accent-color;
+  background-color: $art-deco-text-color;
+
   font-size: 1.5rem;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 
